fixes the ds in match play to not get cut off

--- a/static/css/cheesy-arena.css
+++ b/static/css/cheesy-arena.css
@@ -61,7 +61,7 @@
   border: 1px solid #999;
   border-radius: 4px;
   padding: 0px;
-  width: 50px;
+  width: 60px;
   height: 27px;
   line-height: 25px;
   font-size: 14px;
